Legg til Spring Security og autentisering med JWT Token